--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>org.queryall</groupId>
 	<artifactId>queryall-api</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.1</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<name>queryall-api</name>
 	<url>http://bio2rdf.wiki.sourceforge.net/</url>
 	<inceptionYear>2007</inceptionYear>
