--- a/queryall-webapp/pom.xml
+++ b/queryall-webapp/pom.xml
@@ -49,7 +49,7 @@
 		<dependency>
 			<groupId>org.queryall</groupId>
 			<artifactId>queryall-api</artifactId>
-			<version>1.0.1</version>
+			<version>1.0.2-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
