--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<sesame.version>2.4.3-SNAPSHOT</sesame.version>
-		<sesametools.version>1.4-SNAPSHOT</sesametools.version>
+		<sesametools.version>1.4</sesametools.version>
 	</properties>
 	<build>
 		<plugins>
