--- a/queryall-lib/src/test/resources/queryall.properties
+++ b/queryall-lib/src/test/resources/queryall.properties
@@ -1,19 +1,19 @@
-Settings.DEFAULT_ONTOLOGYTERMURI_PREFIX=http://purl.org/queryall/
-Settings.DEFAULT_ONTOLOGYTERMURI_SUFFIX=:
+queryall.ontologyPrefix=http://purl.org/queryall/
+queryall.ontologySuffix=:
 
-Settings.DEFAULT_RDF_NAMESPACEENTRY_NAMESPACE=ns
-Settings.DEFAULT_RDF_PROFILE_NAMESPACE=profile
-Settings.DEFAULT_RDF_PROJECT_NAMESPACE=project
+queryall.namespaceNamespaceEntries=ns
+queryall.namespaceProfiles=profile
+queryall.namespaceProjects=project
 
-Settings.DEFAULT_RDF_PROVENANCE_NAMESPACE=provenance
-Settings.DEFAULT_RDF_PROVIDER_NAMESPACE=provider
-Settings.DEFAULT_RDF_QUERY_NAMESPACE=query
-Settings.DEFAULT_RDF_QUERYBUNDLE_NAMESPACE=querybundle
-Settings.DEFAULT_RDF_RDFRULE_NAMESPACE=rdfrule
-Settings.DEFAULT_RDF_RULETEST_NAMESPACE=ruletest
-Settings.DEFAULT_RDF_STATISTICS_NAMESPACE=statistics
-Settings.DEFAULT_RDF_TEMPLATE_NAMESPACE=template
-Settings.DEFAULT_RDF_WEBAPP_CONFIGURATION_NAMESPACE=webapp_configuration
+queryall.namespaceProvenanceRecords=provenance
+queryall.namespaceProviders=provider
+queryall.namespaceQueryTypes=query
+queryall.namespaceQueryBundles=querybundle
+queryall.namespaceNormalisationRules=rdfrule
+queryall.namespaceRuleTests=ruletest
+queryall.namespaceStatistics=statistics
+queryall.namespaceTemplates=template
+queryall.namespaceWebApplicationConfiguration=webapp_configuration
 
 #queryall.BaseConfigLocation=${queryall.BaseConfigLocation}
 #queryall.BaseConfigMimeFormat=${queryall.BaseConfigMimeFormat}
