--- a/queryall-lib/src/test/resources/log4j.properties
+++ b/queryall-lib/src/test/resources/log4j.properties
@@ -18,6 +18,7 @@ log4j.logger.org.tuckey=WARN
 log4j.logger.de.fuberlin.wiwiss.pubby.negotiation=WARN
 
 log4j.logger.org.queryall=INFO
+log4j.logger.org.queryall.utils.ProfileUtils=TRACE
 log4j.logger.org.bio2rdf=INFO
 
 
