--- a/queryall-webapp/pom.xml
+++ b/queryall-webapp/pom.xml
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.1</version>
+			<version>${slf4j.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
