--- a/queryall-api/pom.xml
+++ b/queryall-api/pom.xml
@@ -69,7 +69,7 @@
 			<artifactId>sesame-sail-memory</artifactId>
 			<version>${sesame.version}</version>
 			<type>jar</type>
-			<scope>test</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
