--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<sesame.version>2.4.3-SNAPSHOT</sesame.version>
+		<sesame.version>2.5.0</sesame.version>
 		<sesametools.version>1.5-SNAPSHOT</sesametools.version>
 		<slf4j.version>1.6.2</slf4j.version>
 	</properties>
