--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
 		</mailingList>
 	</mailingLists>
 	<properties>
+		<junit.version>4.8.2</junit.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<sesame.version>2.5.0</sesame.version>
