--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -18,6 +18,12 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.queryall</groupId>
+    	<artifactId>queryall-lib</artifactId>
+    	<version>1.0.2-SNAPSHOT</version>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
   <description>Created to separate the tests that work best on imported jar files (ie, META-INF/services) from the code that they rely on.</description>
   <inceptionYear>2011</inceptionYear>
