--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -1,30 +1,46 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>queryall</artifactId>
-    <groupId>org.queryall</groupId>
-    <version>1</version>
-  </parent>
-  <groupId>org.queryall</groupId>
-  <artifactId>queryall-lib-test</artifactId>
-  <version>1.0.2-SNAPSHOT</version>
-  <name>queryall-lib-test</name>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.queryall</groupId>
-    	<artifactId>queryall-lib</artifactId>
-    	<version>1.0.2-SNAPSHOT</version>
-    	<scope>test</scope>
-    </dependency>
-  </dependencies>
-  <description>Created to separate the tests that work best on imported jar files (ie, META-INF/services) from the code that they rely on.</description>
-  <inceptionYear>2011</inceptionYear>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>queryall</artifactId>
+		<groupId>org.queryall</groupId>
+		<version>1</version>
+	</parent>
+	<groupId>org.queryall</groupId>
+	<artifactId>queryall-lib-test</artifactId>
+	<version>1.0.2-SNAPSHOT</version>
+	<name>queryall-lib-test</name>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-lib</artifactId>
+			<version>1.0.2-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.16</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+
+	</dependencies>
+	<description>Created to separate the tests that work best on imported jar files (ie, META-INF/services) from the code that they rely on.</description>
+	<inceptionYear>2011</inceptionYear>
 </project>
