--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<sesame.version>2.5.0</sesame.version>
-		<sesametools.version>1.5-SNAPSHOT</sesametools.version>
+		<sesametools.version>1.5</sesametools.version>
 		<slf4j.version>1.6.2</slf4j.version>
 	</properties>
 	<build>
