--- a/queryall-lib/pom.xml
+++ b/queryall-lib/pom.xml
@@ -169,39 +169,16 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-        <dependency>
-            <!-- see http://weblogs.java.net/blog/kohsuke/archive/2009/03/my_project_of_t.html -->
-            <groupId>org.kohsuke.metainf-services</groupId>
-            <artifactId>metainf-services</artifactId>
-            <version>1.1</version>
+		<dependency>
+			<!-- see http://weblogs.java.net/blog/kohsuke/archive/2009/03/my_project_of_t.html -->
+			<groupId>org.kohsuke.metainf-services</groupId>
+			<artifactId>metainf-services</artifactId>
+			<version>1.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
-            <!-- Optional because it is only needed for compilation, and is not needed at runtime -->
-            <optional>true</optional>
-        </dependency>
+			<!-- Optional because it is only needed for compilation, and is not needed 
+				at runtime -->
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
-	<build>
-		<resources>
-			<resource>
-				<directory>src/test/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<plugins>
-			<!-- Added test excludes for Abstract -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>**/Abstract*</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
