--- a/queryall-biomart/pom.xml
+++ b/queryall-biomart/pom.xml
@@ -109,14 +109,9 @@
 			<scope>compile</scope>
 			<version>${sesame.version}</version>
 		</dependency>
-<!-- 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.5.6</version>
-			<type>jar</type>
-			<scope>runtime</scope>
-		</dependency>
- -->		<dependency>
+		<!-- <dependency> <groupId>org.slf4j</groupId> <artifactId>slf4j-log4j12</artifactId> 
+			<version>1.5.6</version> <type>jar</type> <scope>runtime</scope> </dependency> -->
+		<dependency>
 			<groupId>net.sf.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<type>jar</type>
@@ -130,7 +125,8 @@
 			<version>0.8-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
-		<!-- This is required by biomart-java but not declared or provided by any other software -->
+		<!-- This is required by biomart-java but not declared or provided by any 
+			other software -->
 		<dependency>
 			<groupId>org.jdom</groupId>
 			<artifactId>jdom</artifactId>
