--- a/queryall-lib-test/src/test/resources/log4j.properties
+++ b/queryall-lib-test/src/test/resources/log4j.properties
@@ -20,6 +20,8 @@ log4j.logger.de.fuberlin.wiwiss.pubby.negotiation=WARN
 log4j.logger.org.queryall=INFO
 log4j.logger.org.queryall.impl.querytype=INFO
 log4j.logger.org.queryall.impl.rdfrule=INFO
+log4j.logger.org.queryall.impl.rdfrule.NormalisationRuleImpl=DEBUG
+log4j.logger.org.queryall.impl.rdfrule.SparqlNormalisationRuleImpl=TRACE
 log4j.logger.org.queryall.impl.ruletest=INFO
 
 log4j.logger.org.bio2rdf=INFO
