--- a/queryall-lib-test/src/test/resources/log4j.properties
+++ b/queryall-lib-test/src/test/resources/log4j.properties
@@ -11,12 +11,13 @@ log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%-5p - %d{dd/MM/yyyy HH:mm:ss} - %m%n
 
 log4j.logger.org.deri.pipes=FATAL
-log4j.logger.org.openrdf=WARN
+log4j.logger.org.openrdf=TRACE
 log4j.logger.org.openid4java=WARN
 log4j.logger.org.apache.velocity.runtime.log.SimpleLog4JLogSystem=WARN
 log4j.logger.org.tuckey=WARN
 log4j.logger.de.fuberlin.wiwiss.pubby.negotiation=WARN
 
 log4j.logger.org.queryall=INFO
+log4j.logger.org.queryall.utils.RdfUtils=TRACE
 
 
