--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
 		<module>queryall-webapp</module>
 		<!-- <module>queryall-reasoner</module> -->
 		<!-- <module>queryall-biomart</module> -->
-    
-		
+
+
+		<module>queryall-ext-rule-xslt</module>
 	</modules>
 	<name>Queryall RDF services</name>
 	<description>A package of services enabling access to a variety of datasources, with the results normalised to a single browsable Linked Data set of results.</description>
