--- a/queryall-ext-rule-owl/pom.xml
+++ b/queryall-ext-rule-owl/pom.xml
@@ -27,5 +27,10 @@
     	<artifactId>pellet-owlapiv3</artifactId>
     	<version>2.3.0</version>
     </dependency>
+    <dependency>
+    	<groupId>org.queryall</groupId>
+    	<artifactId>queryall-api</artifactId>
+    	<version>${queryall.version}</version>
+    </dependency>
   </dependencies>
 </project>
