--- a/queryall-lib-test/pom.xml
+++ b/queryall-lib-test/pom.xml
@@ -102,7 +102,12 @@
 			<type>jar</type>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-ext-rule-xslt</artifactId>
+			<version>${queryall.version}</version>
+		</dependency>
 	</dependencies>
-	<description>Created to separate the tests that work best on imported jar files (ie, META-INF/services) from the code that they rely on.</description>
+	<description>Created to separate the tests from the multiple modules that they rely on.</description>
 	<inceptionYear>2011</inceptionYear>
 </project>
