--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<queryall.version>1.2-SNAPSHOT</queryall.version>
 		<sesame.version>2.6.0</sesame.version>
-		<sesametools.version>1.5</sesametools.version>
+		<sesametools.version>1.6-SNAPSHOT</sesametools.version>
 		<slf4j.version>1.6.3</slf4j.version>
 	</properties>
 	<build>
