--- a/queryall-ext-rule-spin/pom.xml
+++ b/queryall-ext-rule-spin/pom.xml
@@ -1,34 +1,51 @@
 <?xml version="1.0"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>queryall-parent</artifactId>
-    <groupId>org.queryall</groupId>
-    <version>1.2-SNAPSHOT</version>
-  </parent>
-  <artifactId>queryall-ext-rule-spin</artifactId>
-  <name>queryall-ext-spin</name>
-  <url>http://maven.apache.org</url>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-    	<groupId>org.topquadrant</groupId>
-    	<artifactId>spin-api</artifactId>
-    	<version>1.2.0</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.queryall</groupId>
-    	<artifactId>queryall-api</artifactId>
-    	<version>${queryall.version}</version>
-    </dependency>
-  </dependencies>
+<project
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>queryall-parent</artifactId>
+		<groupId>org.queryall</groupId>
+		<version>1.2-SNAPSHOT</version>
+	</parent>
+	<artifactId>queryall-ext-rule-spin</artifactId>
+	<name>queryall-ext-rule-spin</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.topquadrant</groupId>
+			<artifactId>spin-api</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-api</artifactId>
+			<version>${queryall.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.queryall</groupId>
+			<artifactId>queryall-lib</artifactId>
+			<version>${queryall.version}</version>
+		</dependency>
+		<dependency>
+			<!-- see http://weblogs.java.net/blog/kohsuke/archive/2009/03/my_project_of_t.html -->
+			<groupId>org.kohsuke.metainf-services</groupId>
+			<artifactId>metainf-services</artifactId>
+			<version>1.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+			<!-- Optional because it is only needed for compilation, and is not needed 
+				at runtime -->
+			<optional>true</optional>
+		</dependency>
+	</dependencies>
 </project>
